# sitemap-hs

./: .gitignore  CHANGELOG.md  README.md  cabal.project  sitemap-hs.cabal  sitemapping.cabal  stack.yaml
.github/workflows/: pipeline.yml
app/: Main.hs
src/Text/: Sitemap.hs
test/: Doctests.hs  Main.hs  Readme.hs
test/spec/: index.data  index.xml  sitemap.data  sitemap.xml
