cabal-version:      2.4
name:               sitemap-hs
version:            0.1.0.0
author:             Sondre Aasemoen
maintainer:         sondre@eons.io
synopsis:           A sitemap parser and generator
description:        A sitemap parser, generator and validator for websites.
category:           Web
homepage:           https://github.com/sondr3/sitemap-hs
license-file:       LICENSE LICENSE_APACHE
license:            (MIT OR Apache-2.0)
build-type:         Simple 
tested-with:        GHC ==8.10 || ==9.0 || ==9.2
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/sitemap-hs.git

common config
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie
    -Wunused-packages

  build-depends:      base ==4.*

library
  import:          config
  exposed-modules: Text.Sitemap
  hs-source-dirs:  src
  build-depends:
    , containers
    , text         >=1    && <3
    , time         ^>=1.12
    , xml-conduit  ^>=1.9
    , xml-types    ^>=0.3

executable sitemap-hs
  import:         config
  main-is:        Main.hs
  build-depends:  sitemap-hs
  hs-source-dirs: app

test-suite sitemap-hs-test
  import:         config
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , sitemap-hs
    , tasty         ^>=1.4
    , tasty-golden  ^>=2.3
    , text          >=1   && <3
    , xml-conduit   ^>=1.9

test-suite sitemap-hs-readme
  import:         config
  hs-source-dirs: test
  main-is:        Readme.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , sitemap-hs
    , text        >=1 && <3
