cabal-version:      3.4
name:               sitemapping
version:            0.1.0.0
author:             Sondre Aasemoen
maintainer:         sondre@eons.io
synopsis:           A sitemap parser and generator
description:        A sitemap parser, generator and validator for websites.
category:           Web
homepage:           https://github.com/sondr3/sitemapping
bug-reports:        https://github.com/sondr3/sitemapping/issues
license-file:       LICENSE LICENSE_APACHE
license:            (MIT OR Apache-2.0)
build-type:         Simple 
tested-with:        GHC ==9.2 || ==9.4 || ==9.6
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/sitemapping.git

common config
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedStrings
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Werror=missing-deriving-strategies
    -fhide-source-paths
    -fwrite-ide-info

  build-depends:      base ==4.*

library
  import:          config
  exposed-modules: Text.Sitemap
  hs-source-dirs:  src
  build-depends:
    , containers
    , text         >=1    && <3
    , time         >=1.11 && <2
    , xml-conduit  ^>=1.9
    , xml-types    ^>=0.3

executable sitemapping
  import:         config
  main-is:        Main.hs
  build-depends:  sitemapping
  hs-source-dirs: app

test-suite sitemapping-test
  import:         config
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , sitemapping
    , tasty         ^>=1.5
    , tasty-golden  ^>=2.3
    , text          >=1   && <3
    , xml-conduit   ^>=1.9

test-suite sitemapping-readme
  import:         config
  hs-source-dirs: test
  main-is:        Readme.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , sitemapping
    , text         >=1 && <3

test-suite doctests
  import:         config
  hs-source-dirs: test
  main-is:        doctests.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded

  if impl(ghc >= 9.2)
    buildable: True 
  else
    buildable: False 

  build-depends:
    , doctest-parallel  ^>=0.3
    , sitemapping
